fixed spacing issue

--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,6 @@ body {
 
 #listing-2 {
   padding-left: 10%;
-  padding-right: 2%;
   padding-bottom: 2%;
 }
 
